Fix paragraph spacing.

--- a/docroot/themes/custom/vagovadmin/assets/scss/_paragraphs.scss
+++ b/docroot/themes/custom/vagovadmin/assets/scss/_paragraphs.scss
@@ -2,8 +2,8 @@
   //.field--name-field-steps .field__item,
   .paragraph {
     border: #dddddd dotted;
-    //margin: 1rem;
-    //padding: .5rem;
+    margin: 1rem;
+    padding: .5rem;
     background-color: rgba(220, 225, 230, .2);
 
     &:hover {
